chart/templates/salat.services.yaml
apiVersion: v1
kind: Service
metadata:
  name: salat
spec:
  selector:
    app: salat
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: salatbar
