chart/templates/sqlite-web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlite-web
spec:
  selector:
    app: sqlite-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: sqlite-web
